--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Auctions</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="auctions_screen">Active Auctions</string>
     <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
 </resources>
